k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-dev
  labels:
    name: ecommerce-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-stage
  labels:
    name: ecommerce-stage
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-prod
  labels:
    name: ecommerce-prod
