k8s/03-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: ecommerce-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: selimhorri/product-service-ecommerce-boot:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8300
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /product-service/actuator/health
            port: 8300
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /product-service/actuator/health
            port: 8300
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: ecommerce-stage
spec:
  type: NodePort
  selector:
    app: product-service
  ports:
  - port: 8500
    targetPort: 8300
    protocol: TCP
