k8s/05-payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ecommerce-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: selimhorri/payment-service-ecommerce-boot:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8400
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /payment-service/actuator/health
            port: 8400
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /payment-service/actuator/health
            port: 8400
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ecommerce-dev
spec:
  type: NodePort
  selector:
    app: payment-service
  ports:
  - port: 8400
    targetPort: 8400
    protocol: TCP
