k8s/06-shipping-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  namespace: ecommerce-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
      - name: shipping-service
        image: selimhorri/shipping-service-ecommerce-boot:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8600
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /shipping-service/actuator/health
            port: 8600
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /shipping-service/actuator/health
            port: 8600
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: ecommerce-stage
spec:
  type: NodePort
  selector:
    app: shipping-service
  ports:
  - port: 8600
    targetPort: 8600
    protocol: TCP
