k8s/07-proxy-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-client
  namespace: ecommerce-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-client
  template:
    metadata:
      labels:
        app: proxy-client
    spec:
      containers:
      - name: proxy-client
        image: selimhorri/proxy-client-ecommerce-boot:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8900
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /app/actuator/health
            port: 8900
          initialDelaySeconds: 90
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /app/actuator/health
            port: 8900
          initialDelaySeconds: 60
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-client
  namespace: ecommerce-stage
spec:
  type: LoadBalancer
  selector:
    app: proxy-client
  ports:
  - port: 8900
    targetPort: 8900
    protocol: TCP
