k8s/11-favourite-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favourite-service
  namespace: ecommerce-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favourite-service
  template:
    metadata:
      labels:
        app: favourite-service
    spec:
      containers:
      - name: favourite-service
        image: selimhorri/favourite-service-ecommerce-boot:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8800
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /favourite-service/actuator/health
            port: 8800
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /favourite-service/actuator/health
            port: 8800
          initialDelaySeconds: 90
          periodSeconds: 5
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: favourite-service
  namespace: ecommerce-stage
spec:
  type: NodePort
  selector:
    app: favourite-service
  ports:
  - port: 8800
    targetPort: 8800
    protocol: TCP
